Fix dataTables collapsed on wide screens, Fix #59

--- a/src/static/css/floating_labels.css
+++ b/src/static/css/floating_labels.css
@@ -128,6 +128,10 @@
 /*!*visibility: hidden*!*/
 /*}*/
 
+.data-table {
+    width: 100% !important;
+}
+
 .paginate_button {
     padding: 0px 2px
 }
@@ -136,6 +140,7 @@
     font-size: 1.4em;
     font-weight: bold;
 }
+
 
 @media (max-width: 480px) {
     .table-search-field {
